--- a/index.html
+++ b/index.html
@@ -42,6 +42,76 @@
         </div>
     </header>
     <!-- heading Finished -->
+
+    <!-- main section started -->
+    <main class="mt-5">
+        <div class="container">
+            <div class="row">
+                <!-- Player section started -->
+                <div class="col-8">
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Lionel Messi</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/4.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Neymar Jr</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/5.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Kylian Mbappé</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/6.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Vítor Machado</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/7.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Sergio Ramos</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="images/8.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Renato Sanches</h5>
+                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Player Section Ended -->
+            </div>
+        </div>
+    </main>
+    <!-- main section finished -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
