--- a/index.html
+++ b/index.html
@@ -107,6 +107,84 @@
                     </div>
                 </div>
                 <!-- Player Section Ended -->
+                <!-- Calculation Section Started -->
+                <div class="col-4">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Selected - V</h5>
+                            <ul class="list-group">
+                                <li class="list-group-item">1.<span></span></li>
+                                <li class="list-group-item">2.<span></span></li>
+                                <li class="list-group-item">3.<span></span></li>
+                                <li class="list-group-item">4.<span></span></li>
+                                <li class="list-group-item">5.<span></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card text-center mt-5" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Budget</h5>
+                            <div class="input-group mb-3 mt-4">
+                                <div class="d-flex">
+                                    <div>
+                                        <span style=" border: none; background-color:white"
+                                            class="input-group-text fw-semibold" id="inputGroup-sizing-default">Per
+                                            Player</span>
+                                    </div>
+                                    <div>
+                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                            aria-describedby="inputGroup-sizing-default">
+                                    </div>
+                                </div>
+                                <div class="w-100 mt-2">
+                                    <button type="button" class="btn btn-primary  w-100 ">Calculate</button>
+                                </div>
+                                <div class="mt-2 d-flex mx-auto">
+                                    <div class="pt-2 w-100">
+                                        <h6>Player Expenses</h6>
+                                    </div>
+                                    <div class="pt-2 px-3 flex-shrink-1">
+                                        <p class="fs-6 fw-semibold">$<span>5000</span></p>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <div>
+                                        <span style=" border: none; background-color:white"
+                                            class="input-group-text fw-semibold"
+                                            id="inputGroup-sizing-default">Manager</span>
+                                    </div>
+                                    <div>
+                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                            aria-describedby="inputGroup-sizing-default">
+                                    </div>
+                                </div>
+                                <div class="d-flex mt-2">
+                                    <div>
+                                        <span style=" border: none; background-color:white"
+                                            class="input-group-text fw-semibold" id="inputGroup-sizing-default">Coach
+                                        </span>
+                                    </div>
+                                    <div>
+                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                            aria-describedby="inputGroup-sizing-default">
+                                    </div>
+                                </div>
+                                <div class="w-100 mt-2">
+                                    <button type="button" class="btn btn-primary  w-100 ">Calculate Total</button>
+                                </div>
+                                <div class="mt-2 d-flex mx-auto">
+                                    <div class="pt-2 px-4 w-100">
+                                        <h6>Total</h6>
+                                    </div>
+                                    <div class="pt-2 px-5 flex-shrink-1">
+                                        <p class="fs-6 fw-semibold">$<span>5000</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Calculation Section Ended -->
             </div>
         </div>
     </main>
