--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                             <div class="card h-100">
                                 <img src="images/3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Lionel Messi</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-1" class="card-title text-center">Lionel Messi</h5>
+                                    <button id="but-1" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -63,8 +64,9 @@
                             <div class="card h-100">
                                 <img src="images/4.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Neymar Jr</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-2" class="card-title text-center">Neymar Jr</h5>
+                                    <button id="but-2" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -72,8 +74,9 @@
                             <div class="card h-100">
                                 <img src="images/5.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Kylian Mbappé</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-3" class="card-title text-center">Kylian Mbappé</h5>
+                                    <button id="but-3" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -81,8 +84,9 @@
                             <div class="card h-100">
                                 <img src="images/6.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Vítor Machado</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-4" class="card-title text-center">Vítor Machado</h5>
+                                    <button id="but-4" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -90,8 +94,9 @@
                             <div class="card h-100">
                                 <img src="images/7.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Sergio Ramos</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-5" class="card-title text-center">Sergio Ramos</h5>
+                                    <button id="but-5" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -99,8 +104,9 @@
                             <div class="card h-100">
                                 <img src="images/8.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Renato Sanches</h5>
-                                    <button type="button" class="btn btn-primary mx-auto d-block">Select</button>
+                                    <h5 id="ply-6" class="card-title text-center">Renato Sanches</h5>
+                                    <button id="but-6" type="button"
+                                        class="btn btn-primary mx-auto d-block">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -112,12 +118,7 @@
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title text-center">Selected - V</h5>
-                            <ul class="list-group">
-                                <li class="list-group-item">1.<span></span></li>
-                                <li class="list-group-item">2.<span></span></li>
-                                <li class="list-group-item">3.<span></span></li>
-                                <li class="list-group-item">4.<span></span></li>
-                                <li class="list-group-item">5.<span></span></li>
+                            <ul id="inp-fld-ply" class="list-group px-3">
                             </ul>
                         </div>
                     </div>
@@ -193,6 +194,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+    <script src="js/web.js"></script>
 </body>
 
 </html>
