--- a/index.html
+++ b/index.html
@@ -133,19 +133,21 @@
                                             Player</span>
                                     </div>
                                     <div>
-                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                        <input id="inp-play-cal" type="text" class="form-control"
+                                            aria-label="Sizing example input"
                                             aria-describedby="inputGroup-sizing-default">
                                     </div>
                                 </div>
                                 <div class="w-100 mt-2">
-                                    <button type="button" class="btn btn-primary  w-100 ">Calculate</button>
+                                    <button id="btn-cal" type="button"
+                                        class="btn btn-primary  w-100 ">Calculate</button>
                                 </div>
                                 <div class="mt-2 d-flex mx-auto">
                                     <div class="pt-2 w-100">
                                         <h6>Player Expenses</h6>
                                     </div>
                                     <div class="pt-2 px-3 flex-shrink-1">
-                                        <p class="fs-6 fw-semibold">$<span>5000</span></p>
+                                        <p class="fs-6 fw-semibold">$<span id="play-cal">0</span></p>
                                     </div>
                                 </div>
                                 <div class="d-flex">
