--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                                             id="inputGroup-sizing-default">Manager</span>
                                     </div>
                                     <div>
-                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                        <input id="inp-man" type="text" class="form-control"
+                                            aria-label="Sizing example input"
                                             aria-describedby="inputGroup-sizing-default">
                                     </div>
                                 </div>
@@ -168,19 +169,21 @@
                                         </span>
                                     </div>
                                     <div>
-                                        <input type="text" class="form-control" aria-label="Sizing example input"
+                                        <input id="inp-coach" type="text" class="form-control"
+                                            aria-label="Sizing example input"
                                             aria-describedby="inputGroup-sizing-default">
                                     </div>
                                 </div>
                                 <div class="w-100 mt-2">
-                                    <button type="button" class="btn btn-primary  w-100 ">Calculate Total</button>
+                                    <button id="total-cal" type="button" class="btn btn-primary  w-100 ">Calculate
+                                        Total</button>
                                 </div>
                                 <div class="mt-2 d-flex mx-auto">
                                     <div class="pt-2 px-4 w-100">
                                         <h6>Total</h6>
                                     </div>
                                     <div class="pt-2 px-5 flex-shrink-1">
-                                        <p class="fs-6 fw-semibold">$<span>5000</span></p>
+                                        <p class="fs-6 fw-semibold">$<span id="tot-val">0</span></p>
                                     </div>
                                 </div>
                             </div>
