--- a/index.html
+++ b/index.html
@@ -115,14 +115,15 @@
                 <!-- Player Section Ended -->
                 <!-- Calculation Section Started -->
                 <div class="col-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 18rem;
+                    height: 200px;">
                         <div class="card-body">
-                            <h5 class="card-title text-center">Selected - V</h5>
+                            <h5 class="card-title text-center">Choose Player</h5>
                             <ul id="inp-fld-ply" class="list-group px-3">
                             </ul>
                         </div>
                     </div>
-                    <div class="card text-center mt-5" style="width: 18rem;">
+                    <div class="card text-center mt-3 mb-3" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Budget</h5>
                             <div class="input-group mb-3 mt-4">
